# inrich

./: README.md  pyproject.toml
src/inrich/: __init__.py
